y.output

state 0
	$accept: .input $end 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tNOT  shift 11
	tPLUS  shift 6
	tMINUS  shift 7
	tLEFTBRACKET  shift 10
	.  error

	searchBase  goto 9
	searchParts  goto 2
	searchPart  goto 3
	searchLogicPart  goto 5
	searchLogicSimplePart  goto 8
	searchPrefix  goto 4
	input  goto 1

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  searchParts.    (1)

	.  reduce 1 (src line 25)


state 3
	searchParts:  searchPart.searchParts 
	searchParts:  searchPart.    (3)

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tNOT  shift 11
	tPLUS  shift 6
	tMINUS  shift 7
	tLEFTBRACKET  shift 10
	.  reduce 3 (src line 34)

	searchBase  goto 9
	searchParts  goto 15
	searchPart  goto 3
	searchLogicPart  goto 5
	searchLogicSimplePart  goto 8
	searchPrefix  goto 4

state 4
	searchPart:  searchPrefix.searchBase 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	.  error

	searchBase  goto 16

state 5
	searchPart:  searchLogicPart.    (5)

	.  reduce 5 (src line 48)


state 6
	searchPrefix:  tPLUS.    (12)

	.  reduce 12 (src line 79)


state 7
	searchPrefix:  tMINUS.    (13)

	.  reduce 13 (src line 83)


state 8
	searchLogicPart:  searchLogicSimplePart.    (6)
	searchLogicPart:  searchLogicSimplePart.tAND searchPart 
	searchLogicPart:  searchLogicSimplePart.tOR searchPart 

	tAND  shift 17
	tOR  shift 18
	.  reduce 6 (src line 53)


state 9
	searchLogicSimplePart:  searchBase.    (9)

	.  reduce 9 (src line 66)


state 10
	searchLogicSimplePart:  tLEFTBRACKET.searchLogicPart tRIGHTBRACKET 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tNOT  shift 11
	tLEFTBRACKET  shift 10
	.  error

	searchBase  goto 9
	searchLogicPart  goto 19
	searchLogicSimplePart  goto 8

state 11
	searchLogicSimplePart:  tNOT.searchLogicSimplePart 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tNOT  shift 11
	tLEFTBRACKET  shift 10
	.  error

	searchBase  goto 9
	searchLogicSimplePart  goto 20

state 12
	searchBase:  tSTRING.    (14)
	searchBase:  tSTRING.tCOLON tSTRING 
	searchBase:  tSTRING.tCOLON posOrNegNumber 
	searchBase:  tSTRING.tCOLON tPHRASE 
	searchBase:  tSTRING.tCOLON tGREATER posOrNegNumber 
	searchBase:  tSTRING.tCOLON tGREATER tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tCOLON tLESS posOrNegNumber 
	searchBase:  tSTRING.tCOLON tLESS tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tCOLON tGREATER tPHRASE 
	searchBase:  tSTRING.tCOLON tGREATER tEQUAL tPHRASE 
	searchBase:  tSTRING.tCOLON tLESS tPHRASE 
	searchBase:  tSTRING.tCOLON tLESS tEQUAL tPHRASE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGEEXCL posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGEEXCL 
	searchBase:  tSTRING.tCOLON tLEFTRANGEEXCL posOrNegNumber tTO posOrNegNumber tRIGHTRANGEEXCL 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tSTRING tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGEEXCL tSTRING tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tSTRING tTO tSTRING tRIGHTRANGEEXCL 
	searchBase:  tSTRING.tCOLON tLEFTRANGEEXCL tSTRING tTO tSTRING tRIGHTRANGEEXCL 

	tCOLON  shift 21
	.  reduce 14 (src line 88)


state 13
	searchBase:  tNUMBER.    (15)

	.  reduce 15 (src line 92)


state 14
	searchBase:  tPHRASE.    (16)

	.  reduce 16 (src line 96)


state 15
	searchParts:  searchPart searchParts.    (2)

	.  reduce 2 (src line 30)


state 16
	searchPart:  searchPrefix searchBase.    (4)

	.  reduce 4 (src line 39)


state 17
	searchLogicPart:  searchLogicSimplePart tAND.searchPart 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tNOT  shift 11
	tPLUS  shift 6
	tMINUS  shift 7
	tLEFTBRACKET  shift 10
	.  error

	searchBase  goto 9
	searchPart  goto 22
	searchLogicPart  goto 5
	searchLogicSimplePart  goto 8
	searchPrefix  goto 4

state 18
	searchLogicPart:  searchLogicSimplePart tOR.searchPart 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tNOT  shift 11
	tPLUS  shift 6
	tMINUS  shift 7
	tLEFTBRACKET  shift 10
	.  error

	searchBase  goto 9
	searchPart  goto 23
	searchLogicPart  goto 5
	searchLogicSimplePart  goto 8
	searchPrefix  goto 4

state 19
	searchLogicSimplePart:  tLEFTBRACKET searchLogicPart.tRIGHTBRACKET 

	tRIGHTBRACKET  shift 24
	.  error


state 20
	searchLogicSimplePart:  tNOT searchLogicSimplePart.    (11)

	.  reduce 11 (src line 74)


state 21
	searchBase:  tSTRING tCOLON.tSTRING 
	searchBase:  tSTRING tCOLON.posOrNegNumber 
	searchBase:  tSTRING tCOLON.tPHRASE 
	searchBase:  tSTRING tCOLON.tGREATER posOrNegNumber 
	searchBase:  tSTRING tCOLON.tGREATER tEQUAL posOrNegNumber 
	searchBase:  tSTRING tCOLON.tLESS posOrNegNumber 
	searchBase:  tSTRING tCOLON.tLESS tEQUAL posOrNegNumber 
	searchBase:  tSTRING tCOLON.tGREATER tPHRASE 
	searchBase:  tSTRING tCOLON.tGREATER tEQUAL tPHRASE 
	searchBase:  tSTRING tCOLON.tLESS tPHRASE 
	searchBase:  tSTRING tCOLON.tLESS tEQUAL tPHRASE 
	searchBase:  tSTRING tCOLON.tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTRANGEEXCL posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGEEXCL 
	searchBase:  tSTRING tCOLON.tLEFTRANGEEXCL posOrNegNumber tTO posOrNegNumber tRIGHTRANGEEXCL 
	searchBase:  tSTRING tCOLON.tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTRANGE tSTRING tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTRANGEEXCL tSTRING tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTRANGE tSTRING tTO tSTRING tRIGHTRANGEEXCL 
	searchBase:  tSTRING tCOLON.tLEFTRANGEEXCL tSTRING tTO tSTRING tRIGHTRANGEEXCL 

	tSTRING  shift 25
	tPHRASE  shift 27
	tNUMBER  shift 32
	tMINUS  shift 33
	tLEFTRANGE  shift 30
	tLEFTRANGEEXCL  shift 31
	tGREATER  shift 28
	tLESS  shift 29
	.  error

	posOrNegNumber  goto 26

state 22
	searchLogicPart:  searchLogicSimplePart tAND searchPart.    (7)

	.  reduce 7 (src line 57)


state 23
	searchLogicPart:  searchLogicSimplePart tOR searchPart.    (8)

	.  reduce 8 (src line 61)


state 24
	searchLogicSimplePart:  tLEFTBRACKET searchLogicPart tRIGHTBRACKET.    (10)

	.  reduce 10 (src line 70)


state 25
	searchBase:  tSTRING tCOLON tSTRING.    (17)

	.  reduce 17 (src line 102)


state 26
	searchBase:  tSTRING tCOLON posOrNegNumber.    (18)

	.  reduce 18 (src line 108)


state 27
	searchBase:  tSTRING tCOLON tPHRASE.    (19)

	.  reduce 19 (src line 115)


state 28
	searchBase:  tSTRING tCOLON tGREATER.posOrNegNumber 
	searchBase:  tSTRING tCOLON tGREATER.tEQUAL posOrNegNumber 
	searchBase:  tSTRING tCOLON tGREATER.tPHRASE 
	searchBase:  tSTRING tCOLON tGREATER.tEQUAL tPHRASE 

	tPHRASE  shift 36
	tNUMBER  shift 32
	tMINUS  shift 33
	tEQUAL  shift 35
	.  error

	posOrNegNumber  goto 34

state 29
	searchBase:  tSTRING tCOLON tLESS.posOrNegNumber 
	searchBase:  tSTRING tCOLON tLESS.tEQUAL posOrNegNumber 
	searchBase:  tSTRING tCOLON tLESS.tPHRASE 
	searchBase:  tSTRING tCOLON tLESS.tEQUAL tPHRASE 

	tPHRASE  shift 39
	tNUMBER  shift 32
	tMINUS  shift 33
	tEQUAL  shift 38
	.  error

	posOrNegNumber  goto 37

state 30
	searchBase:  tSTRING tCOLON tLEFTRANGE.posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE.posOrNegNumber tTO posOrNegNumber tRIGHTRANGEEXCL 
	searchBase:  tSTRING tCOLON tLEFTRANGE.tPHRASE tTO tPHRASE tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE.tSTRING tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE.tSTRING tTO tSTRING tRIGHTRANGEEXCL 

	tSTRING  shift 42
	tPHRASE  shift 41
	tNUMBER  shift 32
	tMINUS  shift 33
	.  error

	posOrNegNumber  goto 40

state 31
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL.posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL.posOrNegNumber tTO posOrNegNumber tRIGHTRANGEEXCL 
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL.tSTRING tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL.tSTRING tTO tSTRING tRIGHTRANGEEXCL 

	tSTRING  shift 44
	tNUMBER  shift 32
	tMINUS  shift 33
	.  error

	posOrNegNumber  goto 43

state 32
	posOrNegNumber:  tNUMBER.    (37)

	.  reduce 37 (src line 252)


state 33
	posOrNegNumber:  tMINUS.tNUMBER 

	tNUMBER  shift 45
	.  error


state 34
	searchBase:  tSTRING tCOLON tGREATER posOrNegNumber.    (20)

	.  reduce 20 (src line 121)


state 35
	searchBase:  tSTRING tCOLON tGREATER tEQUAL.posOrNegNumber 
	searchBase:  tSTRING tCOLON tGREATER tEQUAL.tPHRASE 

	tPHRASE  shift 47
	tNUMBER  shift 32
	tMINUS  shift 33
	.  error

	posOrNegNumber  goto 46

state 36
	searchBase:  tSTRING tCOLON tGREATER tPHRASE.    (24)

	.  reduce 24 (src line 149)


state 37
	searchBase:  tSTRING tCOLON tLESS posOrNegNumber.    (22)

	.  reduce 22 (src line 135)


state 38
	searchBase:  tSTRING tCOLON tLESS tEQUAL.posOrNegNumber 
	searchBase:  tSTRING tCOLON tLESS tEQUAL.tPHRASE 

	tPHRASE  shift 49
	tNUMBER  shift 32
	tMINUS  shift 33
	.  error

	posOrNegNumber  goto 48

state 39
	searchBase:  tSTRING tCOLON tLESS tPHRASE.    (26)

	.  reduce 26 (src line 163)


state 40
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber.tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber.tTO posOrNegNumber tRIGHTRANGEEXCL 

	tTO  shift 50
	.  error


state 41
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE.tTO tPHRASE tRIGHTRANGE 

	tTO  shift 51
	.  error


state 42
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING.tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING.tTO tSTRING tRIGHTRANGEEXCL 

	tTO  shift 52
	.  error


state 43
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL posOrNegNumber.tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL posOrNegNumber.tTO posOrNegNumber tRIGHTRANGEEXCL 

	tTO  shift 53
	.  error


state 44
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL tSTRING.tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL tSTRING.tTO tSTRING tRIGHTRANGEEXCL 

	tTO  shift 54
	.  error


state 45
	posOrNegNumber:  tMINUS tNUMBER.    (38)

	.  reduce 38 (src line 256)


state 46
	searchBase:  tSTRING tCOLON tGREATER tEQUAL posOrNegNumber.    (21)

	.  reduce 21 (src line 128)


state 47
	searchBase:  tSTRING tCOLON tGREATER tEQUAL tPHRASE.    (25)

	.  reduce 25 (src line 156)


state 48
	searchBase:  tSTRING tCOLON tLESS tEQUAL posOrNegNumber.    (23)

	.  reduce 23 (src line 142)


state 49
	searchBase:  tSTRING tCOLON tLESS tEQUAL tPHRASE.    (27)

	.  reduce 27 (src line 170)


state 50
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO.posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO.posOrNegNumber tRIGHTRANGEEXCL 

	tNUMBER  shift 32
	tMINUS  shift 33
	.  error

	posOrNegNumber  goto 55

state 51
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE tTO.tPHRASE tRIGHTRANGE 

	tPHRASE  shift 56
	.  error


state 52
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO.tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO.tSTRING tRIGHTRANGEEXCL 

	tSTRING  shift 57
	.  error


state 53
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL posOrNegNumber tTO.posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL posOrNegNumber tTO.posOrNegNumber tRIGHTRANGEEXCL 

	tNUMBER  shift 32
	tMINUS  shift 33
	.  error

	posOrNegNumber  goto 58

state 54
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL tSTRING tTO.tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL tSTRING tTO.tSTRING tRIGHTRANGEEXCL 

	tSTRING  shift 59
	.  error


state 55
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber.tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber.tRIGHTRANGEEXCL 

	tRIGHTRANGE  shift 60
	tRIGHTRANGEEXCL  shift 61
	.  error


state 56
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE tTO tPHRASE.tRIGHTRANGE 

	tRIGHTRANGE  shift 62
	.  error


state 57
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO tSTRING.tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO tSTRING.tRIGHTRANGEEXCL 

	tRIGHTRANGE  shift 63
	tRIGHTRANGEEXCL  shift 64
	.  error


state 58
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL posOrNegNumber tTO posOrNegNumber.tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL posOrNegNumber tTO posOrNegNumber.tRIGHTRANGEEXCL 

	tRIGHTRANGE  shift 65
	tRIGHTRANGEEXCL  shift 66
	.  error


state 59
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL tSTRING tTO tSTRING.tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL tSTRING tTO tSTRING.tRIGHTRANGEEXCL 

	tRIGHTRANGE  shift 67
	tRIGHTRANGEEXCL  shift 68
	.  error


state 60
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGE.    (28)

	.  reduce 28 (src line 177)


state 61
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGEEXCL.    (30)

	.  reduce 30 (src line 193)


state 62
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTRANGE.    (32)

	.  reduce 32 (src line 209)


state 63
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO tSTRING tRIGHTRANGE.    (33)

	.  reduce 33 (src line 217)


state 64
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO tSTRING tRIGHTRANGEEXCL.    (35)

	.  reduce 35 (src line 233)


state 65
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL posOrNegNumber tTO posOrNegNumber tRIGHTRANGE.    (29)

	.  reduce 29 (src line 185)


state 66
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL posOrNegNumber tTO posOrNegNumber tRIGHTRANGEEXCL.    (31)

	.  reduce 31 (src line 201)


state 67
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL tSTRING tTO tSTRING tRIGHTRANGE.    (34)

	.  reduce 34 (src line 225)


state 68
	searchBase:  tSTRING tCOLON tLEFTRANGEEXCL tSTRING tTO tSTRING tRIGHTRANGEEXCL.    (36)

	.  reduce 36 (src line 241)


22 terminals, 9 nonterminals
39 grammar rules, 69/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
58 working sets used
memory: parser 37/240000
15 extra closures
96 shift entries, 1 exceptions
22 goto entries
16 entries saved by goto default
Optimizer space used: output 91/240000
91 table entries, 1 zero
maximum spread: 22, maximum offset: 53
